fix missing border around images

--- a/src/styles/prose.sass
+++ b/src/styles/prose.sass
@@ -151,9 +151,7 @@ article
 
   img
     margin: 0.5rem auto
-    border:
-      width: 2px
-      color: $color-border
+    border: 2px solid $color-border
       radius: $border-radius-lg
 
   picture
